--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		<!-- <dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -85,5 +90,6 @@
 			</plugin>
 		</plugins>
 	</build>
+	<packaging>war</packaging>
 
 </project>
