--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.h2.console.path=/h2-console
 #spring.jpa.properties.hibernate.default_schema=WORKFORCE
 
 logging.level.org.hibernate:INFO
+
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
+spring.mail.username=AKIA2ZWMQKO2M3UXJPNT
+spring.mail.password=BFXV9WENghWkwPuXCDDW6eN11ZDNG4WkjogUKxxr/OuP
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
