Email changed from AWS to Gmail
Email changed from AWS to Gmail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,11 +22,18 @@ spring.h2.console.path=/h2-console
 
 logging.level.org.hibernate:INFO
 
-spring.mail.host=email-smtp.us-east-1.amazonaws.com
-spring.mail.username=AKIA2ZWMQKO2M3UXJPNT
-spring.mail.password=BFXV9WENghWkwPuXCDDW6eN11ZDNG4WkjogUKxxr/OuP
-spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=587
+#spring.mail.host=email-smtp.us-east-1.amazonaws.com
+#spring.mail.username=AKIA2ZWMQKO2M3UXJPNT
+#spring.mail.password=BFXV9WENghWkwPuXCDDW6eN11ZDNG4WkjogUKxxr/OuP
+#spring.mail.properties.mail.transport.protocol=smtp
+#spring.mail.properties.mail.smtp.port=587
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gaksvytech@gmail.com
+spring.mail.password=skycxhtacegxncvl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
