--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn test 
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn package
+      - mvn package -DskipTests
 artifacts:
   files:
     - target/fieldservice-api-0.0.1-SNAPSHOT.jar
