--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn package -DskipTests
+      - mvn package
 artifacts:
   files:
     - target/fieldservice-api-0.0.1-SNAPSHOT.jar
